# auto_ws

./: README.md
devel/: .catkin  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/lib/amcl/: amcl
devel/lib/auto_ex/: simple_pub_cpp  simple_sub_cpp
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node  navtest
devel/lib/pkgconfig/: amcl.pc  auto_desc.pc  auto_ex.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  rotate_recovery.pc  voxel_grid.pc
devel/share/amcl/cmake/: amclConfig.cmake
devel/share/auto_desc/cmake/: auto_descConfig.cmake
devel/share/auto_ex/cmake/: auto_exConfig.cmake
devel/share/base_local_planner/cmake/: base_local_planner-msg-extras.cmake  base_local_planner-msg-paths.cmake  (+1 more)
src/auto_desc/: CMakeLists.txt  package.xml
src/auto_desc/launch/: display.launch
src/auto_desc/rviz/: display.rviz  display2.rviz  display_fix1.rviz
src/auto_desc/urdf/: auto.urdf
src/auto_ex/: CMakeLists.txt
src/auto_ex/nodes/: simple_pub.cpp  simple_sub.cpp  simple_sub.py
(+22 files in other folders)
